# KabakiAntony

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
assets/css/: main.css
kabakiantony/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
me/: admin.py  models.py  urls.py  views.py
me/templates/me/: blogs.html  index.html  projects.html
templates/: main.html
templates/components/: footer.html  navbar.html
