[tool.poetry]
name = "kabakiantony"
version = "0.1.0"
description = "This is my personal portifolio"
authors = ["Kabaki Antony <kabaki.antony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
